modified:   .env 	modified:   Backends/Backend_main.py 	modified:   Backends/Backend_students/attendance_main.py 	deleted:    Backends/Backend_students/timetable.py 	modified:   Frontends/Frontend_admin/admin_main.py 	modified:   Frontends/Frontend_student/student_main.py 	modified:   Frontends/Frontend_teacher/teacher_main.py
 Untracked files:
	Backends/Backend_students/routers/timetable_router.py
	Backends/Backend_students/routers/work_router.py
	Backends/Backend_students/timetable_main.py
	Backends/Backend_students/work_main.py
	Backends/Backend_teachers/routers/timetable_router.py
	Backends/Backend_teachers/routers/work_router.py

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_USER=root
-DB_PASS="pr1t81m#31"
-DB_NAME=sms
+DB_USER=admin
+DB_PASS="admin"
+DB_NAME=student_management
 RAZORPAY_KEY_ID=rzp_test_XXXX
 RAZORPAY_SECRET=YYYYYYYYY
 
